--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body, html{
     line-height: 140%;
     color: #666;
     text-align: center;
+    /* background: rgb(214, 214, 214); */
     
 }
 .first{
@@ -13,22 +14,25 @@ body, html{
 }
 .one{
     background-color: white;
+    font-size: 25px;
+    line-height: 35px;
 }
 .heading{
     position: absolute;
     top: 40%;
     width: 100%;
     color: white;
-    font-size: 350%;
-    letter-spacing: 3px;
+    font-size: 600%;
+    letter-spacing: 4px;
     text-shadow: 0 0 10px black;
 }
 .subheading{
+    line-height: 50px;
     position: absolute;
     top: 49%;
     width: 100%;
     color: white;
-    font-size: 150%;
+    font-size: 300%;
     letter-spacing: 1px;
     text-shadow: 0 0 10px black;
 }
@@ -40,6 +44,7 @@ body, html{
     background: url(./assets/photos/sebastian-unrau-sp-p7uuT0tw-unsplash.jpg);
     min-height: 60%;
     opacity: 120%;
+    
 
 }
 
@@ -58,10 +63,6 @@ body, html{
     color: white;
     margin-bottom: 10px;
 }
-/* .links{
-    margin-top: -20px;
-    margin-bottom: 30px;
-} */
 a{
     color: white;
 }
@@ -71,10 +72,25 @@ a{
     border-radius: 10px;
 }
 
+.project-photos:hover{
+    flex: 1 1 50%;
+    }
+.project-photos:hover{
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: .7s ease;
+    box-shadow: 0px 0px 5px 0px #000000;
+}
+
+
+
 .two{
     background: rgb(58, 58, 58);
     color: white;
     padding: 2px 30px;
+    font-size: 25px;
+    line-height: 35px;
 }
 /* ========================= */
 .container {
@@ -122,10 +138,13 @@ a{
     min-height: 60%;
     /* opacity: .80; */
 }
-.three{
+.three p{
     background: rgb(58, 58, 58);
     color: white;
-    padding: 1px;
+    padding: 20px;
+    margin: 0;
+    font-size: 25px;
+    line-height: 35px;
 
 }
 .heading3{
@@ -140,9 +159,11 @@ a{
 }
 .forth{
     background: url(./assets/photos/lukasz-szmigiel-jFCViYFYcus-unsplash.jpg);
-    min-height: 90% !important;
-    /* height: 50vh; */
+    /* min-height: 90% !important; */
+    height: 80vh;
     opacity: .95;
+    font-size: 30px;
+    line-height: 45px;
 }
   
 
@@ -153,13 +174,21 @@ a{
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+.contact-word{
+    padding-top: 7%;
+}
 .info-container{
     text-align: right;
     color: white;
     text-shadow: 0 0 10px black;
+    padding-top: 7%;
+}
+.my-email{
+    font-size: 25px;
 }
 .input-field label {
     color: white;
+    font-size: 25px;
     text-shadow: 0 0 10px black;
 }
 
@@ -170,10 +199,20 @@ a{
     color: white;
 }
 
+
 .input-field :focus {
     color: white;
     text-shadow: 0 0 10px black;
 
+  }
+  .contact-info{
+      padding-top: 10%;
+  }
+
+  .media{
+      letter-spacing: 7px;
+     font-size: 50px;
+     line-height: 60px;
   }
   footer{
       padding: 5px;
@@ -184,12 +223,60 @@ a{
 
 
   }
-@media (max-width: 550px){
+
+@media (max-width: 750px){
+    .heading{
+        font-size: 350%;
+    }
+    .subheading{
+        font-size: 200%;
+        line-height: 5px;
+    }
+    }
+@media (max-width: 600px){
     .flex-container{
         display: unset;
     }
     .sites{
         flex-direction: column;
+    }
+    .info-container{
+        text-align: center;
+    }
+    .second{
+        height: 340%;
+    }
+    .info-container{
+        padding-top: 0;
+    }
+    .contact-info{
+        padding-top: 0;
+    }
+    .forth{
+        height: 100vh;
+    }
+}
+
+@media (max-width: 550px) {
+    .second{
+        height: 320%;
+    }
+}
+@media (max-width: 500px) {
+    .heading{
+        font-size: 275%;
+    }
+    .subheading{
+        font-size: 175%;
+        line-height: 0;
+    }
+    .second{
+        height: 290%;
+    }
+    }
+@media (max-width: 450px) {
+    .second{
+        height: 265%;
     }
 }
 
@@ -199,5 +286,8 @@ a{
     }
     .subheading{
         font-size: 120%;
+    }
+    .second{
+        height: 235%;
     }
 }
