--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body, html{
 }
 .one{
     background-color: white;
-    font-size: 25px;
-    line-height: 35px;
+    font-size: 20px;
+    line-height: 30px;
 }
 .heading{
     position: absolute;
@@ -38,6 +38,10 @@ body, html{
 }
 .about{
     padding: 0 30px 5px 30px;
+
+}
+h1,h2{
+    margin-top: 20px;
 }
 
 .second{
