--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body, html{
     background-color: white;
     font-size: 20px;
     line-height: 30px;
+    padding: 20px 70px;
 }
 .heading{
     position: absolute;
@@ -35,7 +36,67 @@ body, html{
     font-size: 300%;
     letter-spacing: 1px;
     text-shadow: 0 0 10px black;
+    text-align:center;
+  
+  font-family:'Roboto';
+  font-weight:300;
+  /* font-size:32px; */
+  /* padding-top:40vh; */
+  height:100vh;
+  overflow:hidden;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0,0,0);
 }
+.coder { 
+    animation: showup 7s;
+    display:inline-block;
+    overflow:hidden;
+    white-space:nowrap;
+}
+  
+.other {
+    display:inline-block;
+    overflow:hidden;
+    white-space:nowrap;
+    animation: reveal 7s;
+    animation-fill-mode: forwards;
+}
+  
+.other span {
+    margin-left:-355px;
+    animation: slidein 7s;
+    animation-fill-mode: forwards;
+}
+  
+@keyframes showup {
+      0% {opacity:0;}
+      20% {opacity:1;}
+      80% {opacity:1;}
+      100% {opacity:1;}
+}
+  
+@keyframes slidein {
+      0% { margin-left:-800px; }
+      20% { margin-left:-800px; }
+      35% { margin-left:0px; }
+      100% { margin-left:0px; }
+}
+  
+@keyframes reveal {
+      0% {opacity:0;width:0px;}
+      20% {opacity:1;width:0px;}
+      30% {width:470px;}
+      80% {opacity:1;}
+      100% {opacity:1;width:470px;}
+}
+  
+
+
+
+
+
+
 .about{
     padding: 0 30px 5px 30px;
 
@@ -83,12 +144,12 @@ a{
     animation: projects;
     animation-duration: 1s;
     animation-fill-mode: forwards;
+    
 }
 @keyframes projects{
     0% { opacity: 0;}
     100% { opacity: 1;}
 }
-
 
 .project-photos:hover{
     flex: 1 1 50%;
@@ -99,16 +160,23 @@ a{
     transform: scale(1.2);
     transition: .7s ease;
     box-shadow: 0px 0px 5px 0px #000000;
+    transition: .5s ease;
+    backface-visibility: hidden;
 }
-
-
+.links {
+    font-size: 30px;
+    cursor: pointer;
+    text-shadow: 0 0 10px black;
+       
+}
 
 .two{
     background: rgb(58, 58, 58);
     color: white;
     padding: 2px 30px;
-    font-size: 25px;
-    line-height: 35px;
+    font-size: 35px;
+    line-height: 45px;
+    padding: 30px 90px;
 }
 /* ========================= */
 .container {
@@ -159,7 +227,7 @@ a{
 .three p{
     background: rgb(58, 58, 58);
     color: white;
-    padding: 20px;
+    padding: 40px 90px;
     margin: 0;
     font-size: 25px;
     line-height: 35px;
@@ -183,8 +251,6 @@ a{
     font-size: 30px;
     line-height: 45px;
 }
-  
-
 .first, .second, .third, .forth{
     position: relative;
     background-position: center;
