--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,7 @@ body, html{
     line-height: 140%;
     color: #666;
     text-align: center;
-    /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
-    /* background: rgb(214, 214, 214); */
+    /* font-family: 'Quicksand', sans-serif; */
     font-family: 'Playfair Display', serif;
     
 }
