--- a/public/style.css
+++ b/public/style.css
@@ -1,175 +1,197 @@
-body, html{
-    height: 100%;
-    margin: 0;
-    line-height: 140%;
-    color: #666;
-    text-align: center;
-    /* font-family: 'Quicksand', sans-serif; */
-    font-family: 'Playfair Display', serif;
-    
+body,
+html {
+  height: 100%;
+  margin: 0;
+  line-height: 140%;
+  color: #666;
+  text-align: center;
+  /* font-family: 'Quicksand', sans-serif; */
+  font-family: "Playfair Display", serif;
 }
-.first{
-    background: url(./assets/photos/mediumBigTree.gif);
-    min-height: 100%;
-    opacity: .95;
+.first {
+  background: url(./assets/photos/mediumBigTree.gif);
+  min-height: 100%;
+  opacity: 0.95;
 }
-.one{
-    background-color: white;
-    font-size: 25px;
-    line-height: 40px;
-    padding: 20px 70px;
+.one {
+  background-color: white;
+  font-size: 25px;
+  line-height: 40px;
+  padding: 20px 70px;
 }
-.one p{
-    text-align: justify;
+.one p {
+  text-align: justify;
 }
-.heading{
-    position: absolute;
-    top: 40%;
-    width: 100%;
-    color: white;
-    font-size: 600%;
-    letter-spacing: 4px;
-    text-shadow: 0 0 10px black;
+.heading {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+  color: white;
+  font-size: 600%;
+  letter-spacing: 4px;
+  text-shadow: 0 0 10px black;
 }
-.subheading{
-    line-height: 50px;
-    position: absolute;
-    top: 49%;
-    width: 100%;
-    color: white;
-    font-size: 300%;
-    letter-spacing: 1px;
-    text-shadow: 0 0 10px black;
-    text-align:center;
-  
-  font-family:'Roboto';
-  font-weight:300;
+.subheading {
+  line-height: 50px;
+  position: absolute;
+  top: 49%;
+  width: 100%;
+  color: white;
+  font-size: 300%;
+  letter-spacing: 1px;
+  text-shadow: 0 0 10px black;
+  text-align: center;
+
+  font-family: "Roboto";
+  font-weight: 300;
   /* font-size:32px; */
   /* padding-top:40vh; */
-  height:100vh;
-  overflow:hidden;
+  height: 100vh;
+  overflow: hidden;
   /* -webkit-backface-visibility: hidden;
   -webkit-perspective: 1000;
   -webkit-transform: translate3d(0,0,0); */
 }
-.coder { 
-    /* animation-delay: 2s; */
-    animation: showup 7s;
-    display:inline-block;
-    overflow:hidden;
-    white-space:nowrap;
+.coder {
+  /* animation-delay: 2s; */
+  animation: showup 7s;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
 }
-  
+
 .phoEdu {
-    display:inline-block;
-    overflow:hidden;
-    white-space:nowrap;
-    animation: reveal 7s;
-    animation-fill-mode: forwards;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  animation: reveal 7s;
+  animation-fill-mode: forwards;
 }
-  
+
 .phoEdu span {
-    margin-left:-355px;
-    animation: slidein 7s;
-    animation-fill-mode: forwards;
+  margin-left: -355px;
+  animation: slidein 7s;
+  animation-fill-mode: forwards;
 }
-  
+
 @keyframes showup {
-      0% {opacity:0;}
-      20% {opacity:1;}
-      80% {opacity:1;}
-      100% {opacity:1;}
-}
-  
-@keyframes slidein {
-      0% { margin-left:-800px; }
-      20% { margin-left:-800px; }
-      35% { margin-left:0px; }
-      100% { margin-left:0px; }
-}
-  
-@keyframes reveal {
-      0% {opacity:0;width:0px;}
-      20% {opacity:1;width:0px;}
-      30% {width:490px;}
-      80% {opacity:1;}
-      100% {opacity:1;width:490px;}
-}
-  
-.about{
-    padding: 0 30px 5px 30px;
-
-}
-h1,h2{
-    margin-top: 20px;
-}
-
-.second{
-    background: url(./assets/photos/sebastian-unrau-sp-p7uuT0tw-unsplash.jpg) no-repeat center center/cover;
-    min-height: 60%;
-    opacity: 120%;
-    max-height: 230%;
-
-    
-
-}
-
-
-.projects{
-    color: white;
-    padding-top: 10px;
-    
-}
-.flex-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-   }
-.sites{
-    flex-direction: row;
-    font-weight: 600;
-    color: white;
-    margin:0 22px 55px 22px;
-    position: relative;
-    
-}
-a{
-    color: white;
-}
-
-.project-photos{
-    margin: 15px;
-    width: 300px;
-    height: 210px;
-    border-radius: 10px;
-    animation: projects;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
+  0% {
+    opacity: 0;
+  }
+  20% {
     opacity: 1;
-    transition: .5s ease;
-    backface-visibility: hidden;
-    
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
+@keyframes slidein {
+  0% {
+    margin-left: -800px;
+  }
+  20% {
+    margin-left: -800px;
+  }
+  35% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: 0px;
+  }
+}
 
-.project-photos:hover{
-    flex: 1 1 50%;
-    }
-.project-photos:hover{
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
-    transition: .7s ease;
-    box-shadow: 0px 0px 5px 0px #000000;
-    transition: .5s ease;
-    backface-visibility: hidden;
+@keyframes reveal {
+  0% {
+    opacity: 0;
+    width: 0px;
+  }
+  20% {
+    opacity: 1;
+    width: 0px;
+  }
+  30% {
+    width: 490px;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+    width: 490px;
+  }
+}
+
+.about {
+  padding: 0 30px 5px 30px;
+}
+h1,
+h2 {
+  margin-top: 20px;
+}
+
+.second {
+  background: url(./assets/photos/sebastian-unrau-sp-p7uuT0tw-unsplash.jpg)
+    no-repeat center center/cover;
+  min-height: 60%;
+  opacity: 120%;
+  max-height: 230%;
+}
+
+.projects {
+  color: white;
+  padding-top: 10px;
+}
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.sites {
+  flex-direction: row;
+  font-weight: 600;
+  color: white;
+  margin: 0 22px 55px 22px;
+  position: relative;
+}
+a {
+  color: white;
+}
+
+.project-photos {
+  margin: 15px;
+  width: 300px;
+  height: 210px;
+  border-radius: 10px;
+  animation: projects;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 1;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.project-photos:hover {
+  flex: 1 1 50%;
+}
+.project-photos:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  transition: 0.7s ease;
+  box-shadow: 0px 0px 5px 0px #000000;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
 }
 
 /* ================================================== */
 
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,700);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400, 500, 700);
 .snip1273 {
-  font-family: 'Raleway', Arial, sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
   position: relative;
   margin: 10px;
   min-width: 310px -60px;
@@ -237,7 +259,7 @@ a{
 .snip1273 figcaption:before,
 .snip1273 figcaption:after {
   position: absolute;
-  content: '';
+  content: "";
   background-color: #ffffff;
   z-index: 1;
   -webkit-transition: all 0.4s ease-in;
@@ -289,295 +311,341 @@ a{
 }
 
 /* ================================================== */
-figcaption h6{
-    text-align: center;
+figcaption h6 {
+  text-align: center;
 }
 
-figure{
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+figure {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
 }
 
 .links {
-    font-size: 30px;
-    cursor: pointer;
-    text-shadow: 0 0 10px black;
-    position: absolute;
-    bottom: -30px;
+  font-size: 30px;
+  cursor: pointer;
+  text-shadow: 0 0 10px black;
+  position: absolute;
+  bottom: -30px;
+  left: 68px;
+}
+.snip1273:hover ~ .links {
+  animation: links;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  transition: 0.2s ease;
+  position: absolute;
+}
+
+@keyframes links {
+  0% {
     left: 68px;
-          
-}
-.snip1273:hover ~ .links{
-    animation: links;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    transition: .2s ease;
-    position: absolute;
-    
+    bottom: -30px;
+  }
+  100% {
+    left: 68px;
+    bottom: -50px;
+  }
 }
 
-@keyframes links{
-    0% { left: 68px; bottom: -30px; }
-    100% {left: 68px; bottom: -50px; }
-    
-}
-
-.two{
-    background: rgb(58, 58, 58);
-    color: white;
-    padding: 2px 30px;
-    font-size: 35px;
-    line-height: 45px;
-    padding: 30px 90px;
+.two {
+  background: rgb(58, 58, 58);
+  color: white;
+  padding: 2px 30px;
+  font-size: 35px;
+  line-height: 45px;
+  padding: 30px 90px;
 }
 /* ========================= */
 .container {
-    display: flex;
-    width: 100%;
-    padding: 4% 2%;
-    box-sizing: border-box;
-    height: 100vh;
-    /* opacity: 2; */
-  }
-  
-  .box {
-    flex: 1;
-    overflow: hidden;
-    transition: .5s;
-    margin: 0 2%;
-    box-shadow: 0 20px 30px rgba(0,0,0,.1);
-    line-height: 0;
-  }
-  
-  .box > img {
-    width: 113%;
-    height: calc(100% - 10vh);
-    object-fit: cover; 
-    transition: .5s;
-    /* opacity: .80; */
-  }
-  
-  .box > span {
-    font-size: 3.8vh;
-    display: block;
-    text-align: center;
-    height: 10vh;
-    line-height: 2.6;
-  }
-  
-  .box:hover { flex: 1 1 50%; }
-  .box:hover > img {
-    width: 100%;
-    height: 100%;
-  }
-   /* ========================= */
-.third{
-    background: url(./assets/photos/kilian-kremer-wgYZtY1TP28-unsplash.jpg);
-    min-height: 60%;
-    /* opacity: .80; */
-}
-.three p{
-    background: rgb(58, 58, 58);
-    color: white;
-    padding: 40px 90px;
-    margin: 0;
-    font-size: 25px;
-    line-height: 35px;
-
-}
-.heading3{
-    padding-top: 20px;
-    margin-top: 0;
-    color: white;
-    text-shadow: 0 0 10px black;
+  display: flex;
+  width: 100%;
+  padding: 4% 2%;
+  box-sizing: border-box;
+  height: 100vh;
+  /* opacity: 2; */
 }
 
-.row{
-    margin-bottom: 0;
+.box {
+  flex: 1;
+  overflow: hidden;
+  transition: 0.5s;
+  margin: 0 2%;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  line-height: 0;
 }
-.forth{
-    background: url(./assets/photos/lukasz-szmigiel-jFCViYFYcus-unsplash.jpg);
-    /* min-height: 90% !important; */
-    height: 80vh;
-    opacity: .95;
-    font-size: 30px;
-    line-height: 45px;
+
+.box > img {
+  width: 113%;
+  height: calc(100% - 10vh);
+  object-fit: cover;
+  transition: 0.5s;
+  /* opacity: .80; */
 }
-.first, .second, .third, .forth{
-    position: relative;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+
+.box > span {
+  font-size: 3.8vh;
+  display: block;
+  text-align: center;
+  height: 10vh;
+  line-height: 2.6;
 }
-.contact-word{
-    padding-top: 7%;
+
+.box:hover {
+  flex: 1 1 50%;
 }
-.info-container{
-    text-align: right;
-    color: white;
-    text-shadow: 0 0 10px black;
-    padding-top: 7%;
+.box:hover > img {
+  width: 100%;
+  height: 100%;
 }
-.my-email{
-    font-size: 25px;
+/* ========================= */
+.third {
+  background: url(./assets/photos/kilian-kremer-wgYZtY1TP28-unsplash.jpg);
+  min-height: 60%;
+  /* opacity: .80; */
 }
-.my-email:hover{    
-    -webkit-transform: scale(1.5);
-    -ms-transform: scale(1.5);
-    transform: scale(1.5);
-    transition: .7s ease;
+.three p {
+  background: rgb(58, 58, 58);
+  color: white;
+  padding: 40px 90px;
+  margin: 0;
+  font-size: 25px;
+  line-height: 35px;
+}
+.heading3 {
+  padding-top: 20px;
+  margin-top: 0;
+  color: white;
+  text-shadow: 0 0 10px black;
+}
+
+.row {
+  margin-bottom: 0;
+}
+.forth {
+  background: url(./assets/photos/lukasz-szmigiel-jFCViYFYcus-unsplash.jpg);
+  /* min-height: 90% !important; */
+  height: 80vh;
+  opacity: 0.95;
+  font-size: 30px;
+  line-height: 45px;
+}
+.first,
+.second,
+.third,
+.forth {
+  position: relative;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.contact-word {
+  padding-top: 7%;
+}
+.info-container {
+  text-align: right;
+  color: white;
+  text-shadow: 0 0 10px black;
+  padding-top: 7%;
+}
+.my-email {
+  font-size: 25px;
+}
+.my-email:hover {
+  -webkit-transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  transform: scale(1.5);
+  transition: 0.7s ease;
 }
 .input-field label {
-    color: white;
-    font-size: 25px;
-    text-shadow: 0 0 10px black;
+  color: white;
+  font-size: 25px;
+  text-shadow: 0 0 10px black;
 }
 
 .input-field :focus + label {
-    color: white !important;
+  color: white !important;
 }
-.input-field{
-    color: white;
+.input-field {
+  color: white;
 }
-
 
 .input-field :focus {
-    color: white;
-    text-shadow: 0 0 10px black;
+  color: white;
+  text-shadow: 0 0 10px black;
+}
+textarea.materialize-textarea {
+  padding-bottom: 20px;
+}
+.contact-info {
+  padding-top: 10%;
+}
 
+.media {
+  letter-spacing: 7px;
+  font-size: 50px;
+  line-height: 60px;
 }
-textarea.materialize-textarea{
-    padding-bottom: 20px;
+.fab:hover {
+  -webkit-transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  transform: scale(1.5);
+  transition: 0.7s ease;
 }
-.contact-info{
-      padding-top: 10%;
+footer {
+  padding: 5px;
+  background: rgb(58, 58, 58);
+  color: rgb(199, 199, 199);
 }
-
-.media{
-      letter-spacing: 7px;
-     font-size: 50px;
-     line-height: 60px;
-}
-.fab:hover{
-    -webkit-transform: scale(1.5);
-    -ms-transform: scale(1.5);
-    transform: scale(1.5);
-    transition: .7s ease;
-    
-}
-footer{
-      padding: 5px;
-      background: rgb(58, 58, 58);
-      color: rgb(199, 199, 199);
-}
-@media (max-width: 1200){
-    @keyframes reveal {
-        0% {opacity:0;width:0px;}
-        20% {opacity:1;width:0px;}
-        30% {width:450px;}
-        80% {opacity:1;}
-        100% {opacity:1;width:450px;}
+@media (max-width: 1200) {
+  @keyframes reveal {
+    0% {
+      opacity: 0;
+      width: 0px;
+    }
+    20% {
+      opacity: 1;
+      width: 0px;
+    }
+    30% {
+      width: 450px;
+    }
+    80% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 1;
+      width: 450px;
+    }
   }
-}  
+}
 
-@media (max-width: 750px){
-    .heading{
-        font-size: 350%;
-    }
-    .subheading{
-        font-size: 200%;
-        top: 330px;
-    }
-    .projects-photos{
-        flex-wrap: wrap;
-    }
-    @keyframes reveal {
-        0% {opacity:0;width:0px;}
-        20% {opacity:1;width:0px;}
-        30% {width:310px;}
-        80% {opacity:1;}
-        100% {opacity:1;width:310px;}
+@media (max-width: 750px) {
+  .heading {
+    font-size: 350%;
   }
+  .subheading {
+    font-size: 200%;
+    top: 330px;
+  }
+  .projects-photos {
+    flex-wrap: wrap;
+  }
+  @keyframes reveal {
+    0% {
+      opacity: 0;
+      width: 0px;
     }
-@media (max-width: 600px){
-    .info-container{
-        text-align: center;
+    20% {
+      opacity: 1;
+      width: 0px;
     }
-    .info-container{
-        padding-top: 0;
+    30% {
+      width: 310px;
     }
-    .contact-info{
-        padding-top: 0;
+    80% {
+      opacity: 1;
     }
-    .forth{
-        height: 100vh;
+    100% {
+      opacity: 1;
+      width: 310px;
     }
+  }
+}
+@media (max-width: 600px) {
+  .info-container {
+    text-align: center;
+  }
+  .info-container {
+    padding-top: 0;
+  }
+  .contact-info {
+    padding-top: 0;
+  }
+  .forth {
+    height: 100vh;
+  }
 }
 
 @media (max-width: 550px) {
-    
 }
 @media (max-width: 500px) {
-    .heading{
-        font-size: 275%;
-    }
-    .subheading{
-        font-size: 175%;
-        line-height: 1;
-        /* display: flexbox;
+  .heading {
+    font-size: 275%;
+  }
+  .subheading {
+    font-size: 175%;
+    line-height: 1;
+    /* display: flexbox;
         flex-direction: row;
         flex-wrap: nowrap; */
-    }
-    .phoEdu{
-        display: inline;
-        
-    }
-    .one {
-        padding: 10px 0px;
-    }
-    .two {
-        padding: 10px 20px;
-    }
-    .three p {
-        padding: 30px 20px;
-    }
-    
-    @keyframes showup {
-        0% {opacity:1;}
-        100% {opacity:1;}
   }
-    
+  .phoEdu {
+    display: inline;
+  }
+  .one {
+    padding: 10px 0px;
+  }
+  .two {
+    padding: 10px 20px;
+  }
+  .three p {
+    padding: 30px 20px;
+  }
+  .one,
+  .two,
+  .three,
+  .four {
+    background-attachment: none;
+  }
+
+  @keyframes showup {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
   @keyframes slidein {
-        0% { margin-left:0px; }
-        100% { margin-left:0px; }
+    0% {
+      margin-left: 0px;
+    }
+    100% {
+      margin-left: 0px;
+    }
   }
-    
+
   @keyframes reveal {
-        0% {opacity:1;width:470px;}
-        100% {opacity:1;width:470px;}
+    0% {
+      opacity: 1;
+      width: 470px;
+    }
+    100% {
+      opacity: 1;
+      width: 470px;
+    }
   }
-    
 }
 @media (max-width: 450px) {
-   
 }
 
 @media (max-width: 400px) {
-    .heading {
-        font-size: 250%;
-    }
-    .subheading{
-        font-size: 120%;
-    }
+  .heading {
+    font-size: 250%;
+  }
+  .subheading {
+    font-size: 120%;
+  }
 }
 @media (max-width: 350px) {
-    .project-photos{
-        margin: 0;
-    }   
-    .second{
-        height: 150%;
-    }
+  .project-photos {
+    margin: 0;
+  }
+  .second {
+    height: 150%;
+  }
 }
