--- a/public/style.css
+++ b/public/style.css
@@ -528,7 +528,7 @@ footer {
   }
   .subheading {
     font-size: 200%;
-    top: 330px;
+    top: 45%;
   }
   .projects-photos {
     flex-wrap: wrap;
