--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ html {
   font-family: "Playfair Display", serif;
 }
 .first {
-  background: url(./assets/photos/20percent.jpg);
+  background: url(./assets/photos/mediumBigTree.gif);
   min-height: 100%;
   opacity: 0.95;
 }
